# pizzabot_v3

./: Cargo.toml  LICENSE
maubot_plugin/: README.txt  maubot.yaml  pizzabot.py
pineapplebot/src/: lib.rs
pizzabot/: Cargo.toml
pizzabot/src/: lib.rs
