[package]
name = "pineapplebot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pizzabot = { path = "../pizzabot" }
pyo3 = { version = "0.14", features = ["extension-module"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
]

